# shopmate

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: bandit.yaml  black.yaml  flake8.yaml  isort.yaml  mypy.yaml  pylint.yaml  pytest.yaml  radon.yaml
core/: settings.py
css/: shopmate.css  shopmate.css.map  style.css.map
django_project/: action.sh  out
django_project/core/: settings.py  urls.py  views.py
django_project/core/static/shopmate/themes/: _variables.scss  bootstrap.css  shopmate.css  shopmate.css.map  shopmate.sass  shopmate.scss
django_project/core/static/shopmate/themes/tmp/: _bootstrap.css  bootstrap.css  shopmate.css  shopmate.css.map  shopmate.scss
django_project/core/templates/: base.htm
django_project/core/templates/__registration/: login.html
django_project/core/templates/registration/: login.html
django_project/css/: shopmate.css  shopmate.css.map
django_project/storemgr/: admin.py  apps.py  filtersets.py  forms.py  models.py  reports.py  serializers.py  signals.py  urls.py  views.py  viewsets.py
django_project/storemgr/migrations/: 0001_initial.py
django_project/storemgr/scripts/: generate_test_data.py  myscript.py
django_project/storemgr/templates/storemgr/custom/: create_brand_modal.htm  dashboard.html  modal.htm  test.html  test2.html
django_project/storemgr/templates/storemgr/detail/: brand.html  customer.html  manufacturer.html
django_project/storemgr/templates/storemgr/navigation/: api.htm  data.htm  report.htm
django_project/storemgr/templates/storemgr/table/: brands.htm  customers.htm  manufacturers.htm  orders.htm  products.htm
django_project/storemgr/urls/: __init__.py  api.py  gui.py  rest.py
django_project/storemgr/views/: analysis.py  gui.py  htmx.py  report.py  rest.py  test.py
django_project/tests/unit/storemgr/: sc  test_model_crud.py  test_viewsets.py
envs/: .env.local  .env.template
storemgr/: admin.py  apps.py  filtersets.py  models.py  serializers.py  urls.py  viewsets.py
storemgr/scripts/: generate_test_data.py
tests/unit/storemgr/: test_model_crud.py
(+88 files in other folders)
