[project]
dependencies = [
    "django",
    "django-auditlog==2.2.0",
    "django-braces",
    "django-debug-toolbar",
    "django-environ",
    "django-extensions",
    "django-filter",
    "django-handyhelpers",
    "django-hostutils",
    "django-userextensions",
    "django-pygwalker",
    "django-signalcontrol",
    "djangorestframework",
    "djangorestframework-filters==1.0.0.dev0",
    "drf-flex-fields",
    "drf-spectacular",
    "drf-renderer-xlsx",
]
description = "Shopmate is an ecommerce-like backend service used to showcase django"
dynamic = ["version"]
keywords = ["django"]
license = {file = "LICENSE"}
name = "shopmate"
readme = "README.md"
requires-python = ">=3.8"


[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "coveralls",
    "isort",
    "model-bakery",
    "mypy",
    "mypy-extensions",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "radon",
    "safety",
    "types-python-dateutil",
    "typing_extensions",
]


[tool.bandit]
exclude_dirs = ["venv", "django_project/tests", "django_project/storemgr/scripts", "*local_test*"]


[tool.black]
line-length = 120


[tool.coverage.report]
show_missing = true


[tool.coverage.run]
branch = true
omit = [
    "django_project/manage.py", 
    "django_project/core/asgi.py",
    "django_project/core/wsgi.py", 
    "django_project/*/local_test/*",
    "django_project/*/migrations/*",
    "django_project/*/scripts/*",
    ]
relative_files = true
source = ["django_project"]


[tool.isort]
profile = "black"


[tool.mypy]
exclude = ["venv/*", "local_test/*", "migrations/*"]
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = "-s -v -x --strict-markers -m 'not extra'"
testpaths = ["django_project/tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]


[tool.ruff]
line-length = 120
exclude = ["django_project/manage.py", "django_project/tests", "django_project/storemgr/migrations", "django_project/*/scripts", "django_project/*/local_test"]
